--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#00897B",
     "icons": [
         {
-            "src": "/icon.png",
+            "src": "icon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
