--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "Aplikasi PWA pertama saya",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#00897B",
-    "theme_color": "#00897B",
+    "background_color": "#00b0ff",
+    "theme_color": "#00b0ff",
     "icons": [
         {
             "src": "icon.png",
