--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,13 @@
     "theme_color": "#00b0ff",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "/img/icon-512.png",
             "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/img/icon-192.png",
+            "sizes": "192x192",
             "type": "image/png"
         }
     ]
